Bug 709259 - Try creating a named cursor before a bitmap cursor. r=karlt